# gemini-chat

./: .env.example  .gitignore  .pdm-python  README.md  mypy.ini  mypy_analysis.txt  mypy_output.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.mypy_cache/3.12/: @plugins_snapshot.json  __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  base64.data.json  (+179 more)
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json
.mypy_cache/3.12/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  coroutines.data.json  coroutines.meta.json  (+34 more)
src/gemini_chat/: __init__.py  chat.py  cli.py  config.py  web.py
tests/: __init__.py  conftest.py  test_chat.py  test_config.py  test_web.py
(+967 files in other folders)
